Adicionado o tópico de vatagens e desvantagens na pagina processo unificado. Ajuste dos parágrafos e adição de uma imagem fixa

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,32 @@
 body {
-    padding: 3%;
-    border: 2px solid black;
+    
     margin-left: 25%;
     margin-right: 25%;
+    background-color: rgb(182, 189, 195);
+    background-image: url(/images/processoUnificadoImagem1.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 23%;
+    background-position: 0%;
+    
 }
+
+.header-container {
+    text-align: center;
+}
+
 
 .navegacao-container {
     display: flex;
+}
+
+p {
+    margin-left: 3%;
+    font-size: larger;
+    font-family: sans-serif;
+    font-style: oblique;
+}
+
+ul, ol {
+    font-size: large;
 }
